--- a/src/app/core/modules/footer/footer.component.html
+++ b/src/app/core/modules/footer/footer.component.html
@@ -22,7 +22,7 @@
           </ul>
         </div>
         <div class="baseboard--content__menu__knowledge">
-          <h3>Conhecimento</h3>
+          <h3>Conhecimentos</h3>
           <ul>
             <li>
               <a href="#">FAQ</a>
