--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<!-- |<app-header></app-header>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
 
-<app-footer></app-footer> -->
-
+<app-footer></app-footer>
+<!--
 <section>
   <div class="mainContent">
     <div class="inform">
@@ -11,4 +11,4 @@
       <h2>Site em construção</h2>
     </div>
   </div>
-</section>
+</section> -->
