--- a/src/app/core/modules/header/header.component.html
+++ b/src/app/core/modules/header/header.component.html
@@ -2,7 +2,9 @@
   <div class="baseline-content">
     <div class="baseline-center">
       <div class="baseline-logo">
-        <img src="../../assets/svg/LOGO 2.svg" alt="Amg Logo" />
+        <a href="/">
+          <img src="../../assets/svg/LOGO 2.svg" alt="Amg Logo"
+        /></a>
       </div>
       <div class="baseline-menu">
         <nav>
