--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,4 +1,5 @@
-<main class="initial fadeIn">
+<img src="/assets/image/Background Image.svg" alt="" />
+<!-- <main class="initial fadeIn">
   <section class="initial--home sector">
     <div class="initial--home__content">
       <h1 class="title-line">
@@ -165,4 +166,4 @@
   >
     <app-home-services></app-home-services>
   </section>
-</main>
+</main> -->
