--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="background-gradient"></div>
 <img src="/assets/image/Background Image.svg" alt="" />
 <!-- <main class="initial fadeIn">
   <section class="initial--home sector">
