--- a/src/app/shared/scss/custom_buttons.scss
+++ b/src/app/shared/scss/custom_buttons.scss
@@ -1,11 +1,11 @@
 .baseline-button .btn-outline-primary,
 .btnHome {
   width: 132px;
-  height: 40px;
+  height: 35px;
   border: 2px;
   color: var(--first-white);
   background-color: #587b52;
-  font-family: "Rubik";
+  font-family: "Albert Sans";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
