--- a/src/app/core/modules/header/header.component.scss
+++ b/src/app/core/modules/header/header.component.scss
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 5000;
     .baseline-content {
@@ -30,7 +30,8 @@
         display: flex;
         align-items: center;
         width: 100%;
-        justify-content: space-between;
+        justify-content: flex-end;
+        gap: 30px;
         .baseline-menu {
           span {
             font-size: 20px;
