--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -18,7 +18,10 @@
   width: 90%;
   margin: 0 auto;
 }
-
+.backround-gradient {
+  position: absolute;
+  background-image: linear-gradient(#000000cc, transparent);
+}
 .sector {
   margin: 0 auto;
   max-width: 1920px;
