--- a/src/app/core/modules/header/header.component.scss
+++ b/src/app/core/modules/header/header.component.scss
@@ -36,8 +36,19 @@
           span {
             font-size: 20px;
             color: var(--first-white);
-            font-family: "Albert Sans";
+            font-family: "Inter", sans-serif;
             font-style: normal;
+            line-height: 120%;
+            &:hover {
+              cursor: pointer;
+            }
+          }
+          .black {
+            font-size: 20px;
+            color: black;
+            font-family: "Inter", sans-serif;
+            font-style: normal;
+            font-weight: 400;
             line-height: 120%;
             &:hover {
               cursor: pointer;
@@ -96,7 +107,7 @@
     span {
       font-size: 20px;
       color: var(--first-white);
-      font-family: "Rubik";
+      font-family: "Inter", sans-serif;
       font-style: normal;
       font-weight: 400;
       line-height: 36px;
