--- a/src/app/shared/scss/custom_buttons.scss
+++ b/src/app/shared/scss/custom_buttons.scss
@@ -5,7 +5,7 @@
   border: 2px;
   color: var(--first-white);
   background-color: #587b52;
-  font-family: "Albert Sans";
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
