atualização componente home

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -14,7 +14,6 @@
     </div>
   </div>
 </div>
-
 <div class="container-about">
   <div class="about-box">
     <h3 class="about-tittle">Quem somos</h3>
@@ -31,4 +30,24 @@
   <div class="about-box">
     <img src="assets/svg/image-section.svg" alt="" />
   </div>
+</div>
+<div class="partners">
+  <h1 class="about-tittle">Rede de Parceiros</h1>
+</div>
+<div class="hiring">
+  <h1 class="about-tittle">Trabalhe Conosco</h1>
+</div>
+<div class="sustentability">
+  <h1 class="about-tittle">Sustentabilidade</h1>
+</div>
+<div class="compliance">
+  <h1 class="about-tittle">Compliance</h1>
+</div>
+<div class="chanel">
+  <h1 class="about-tittle">Este Canal está apto a receber</h1>
+</div>
+<div class="comments">
+  <h1 class="about-tittle">
+    Por meio do menu abaixo você pode fazer seu relato ou sua sugestão.
+  </h1>
 </div>
