--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -63,9 +63,8 @@
 }
 
 .container-about {
-  background: #f6f6f6;
-  margin: 10%;
-
+  background-color: #f6f6f6;
+  padding: 10%;
   display: grid;
   width: 100%;
   grid-template-columns: 45% 45%;
