--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="top">
   <div class="background-gradient">
     <div class="container-contact">
@@ -14,6 +15,7 @@
     </div>
   </div>
 </div>
+
 <div class="container-about">
   <div class="about-box">
     <h3 class="about-tittle">Quem somos</h3>
@@ -25,7 +27,7 @@
       Atualmente, somos uma equipe com mais de 20 desenvolvedores, com sede em
       Uberlândia, atendemos clientes em todo o país.
     </h2>
-    <button class="about-button">Entrar em contato</button>
+    <button class="about-button">Sobre nós </button>
   </div>
   <div class="about-box">
     <img src="assets/svg/image-section.svg" alt="" />
@@ -73,17 +75,47 @@
   <button class="hiring-button">Vagas disponiveis</button>
 </div>
 <div class="container-sustentability">
+  <div class="topo">
   <h1 class="about-tittle">Sustentabilidade</h1>
+  <h1 class="sustentability-subtittle">Algumas Iniciativas:
+  </h1></div>
+  <div class="boxes">
+  <div class="sustentability-box">
+    <img src="assets/svg/sustentability-1.svg" alt="">
+
+    <h2 class="hiring-text">
+      Redução de 80% no uso de copos descartáveis, uma vez que todos os colaboradores utilizam o seu próprio copo para tomar água e café.
+    </h2>
+
+  </div>
+  <div class="sustentability-box">
+    <img src="assets/svg/sustentability-2.svg" alt="">
+
+    <h2 class="hiring-text">
+      Projetos sociais locais e nacionais, com apoio à ONGs, doações de alimentos, ajuda de custo, disponibilização de sistema 100% gratuito e ações em datas comemorativas, com diversas formas de doações.
+    </h2>
+
+  </div>
+</div>
 </div>
 <!-- <div class="compliance">
   <h1 class="about-tittle">Compliance</h1>
 </div> -->
-<div class="container-chanel">
+<!-- <div class="container-chanel">
   <h1 class="about-tittle">Este Canal está apto a receber</h1>
-</div>
+</div> -->
 <div class="container-comments">
+<div class="comments-box">
   <h1 class="about-tittle">
     Por meio do menu abaixo você pode fazer seu relato ou sua sugestão.
   </h1>
+  <h2 class="comments-subtittle">
+    Ainda, você pode utilizá-lo para obter mais informações, inclusive sobre a Contato Seguro, empresa que faz a gestão deste canal, garantindo seu anonimato.
+  </h2>
+  <textarea class="comments-text" maxlength="500" type="text" placeholder="Descreva aqui sua mensagem..."></textarea>
+
+  <button class="sustentability-button">Enviar</button>
+
+</div>
 </div>
 
