About-us component e Hiring Component

--- a/src/app/core/hiring/hiring.component.html
+++ b/src/app/core/hiring/hiring.component.html
@@ -1,2 +1,16 @@
-<div class="fundo-branco"></div>
-<p>hiring works!</p>
+<div class="top-background"></div>
+<div class="container-background">
+  <div class="top-text">
+  <h1 class="bold-tittle">
+    Inicio / Trabalhe conosco
+  </h1>
+</div>
+  <div class="center-text">
+  <h2 class="hiring-tittle">Por que trabalhar conosco?</h2>
+  <h3 class="hiring-g-text">Temos potencial de crescimento</h3>
+  <h3 class="hiring-text">Acreditamos que somos uma empresa com grande potencial de crescimento no mercado, oferecendo desenvolvedores, equipes e soluções para as necessidades de cada cliente.</h3>
+  </div>
+
+
+
+</div>
