--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -119,11 +119,24 @@
           }
         }
         .baseline-button {
+          color: white;
           display: flex;
         }
       }
     }
+    .baseline-black-bold{
+
+      font-size: 20px;
+      color:black;
+      font-family: "Inter", sans-serif;
+      font-weight: bold;
+      line-height: 120%;
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
+
 
   @media screen and (max-width: 900px) {
     i {
