--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -31,7 +31,7 @@ background: #FFFFFF;
   grid-template-columns: 45% 45%;
 }
 .contact-box {
-  font-family: "Inter", sans-serif;
+  font-family:  'Albert Sans', sans-serif;
   padding: 10px;
   color: var(--first-white);
 }
@@ -56,7 +56,7 @@ background: #FFFFFF;
   background-repeat: no-repeat;
   background-position: 93% 50%;
   background-color: #587b52;
-  font-family: "Inter", sans-serif;
+  font-family: 'Albert Sans', sans-serif;
   border-radius: 12px;
   transition: 1s;
   padding-right: 15px;
@@ -90,7 +90,7 @@ background: #FFFFFF;
 
 }
 .about-box {
-  font-family: "Inter", sans-serif;
+  font-family: 'Albert Sans', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -130,7 +130,7 @@ background: #FFFFFF;
   background-repeat: no-repeat;
   background-position: 93% 50%;
   background-color: #587b52;
-  font-family: "Inter", sans-serif;
+  font-family: 'Albert Sans', sans-serif;
   border-radius: 12px;
   transition: 1s;
   padding-right: 15px;
@@ -160,7 +160,7 @@ background: #FFFFFF;
   background-repeat: no-repeat;
   background-position: 93% 50%;
   background-color: #587b52;
-  font-family: "Inter", sans-serif;
+  font-family: 'Albert Sans', sans-serif;
   border-radius: 12px;
   transition: 1s;
   padding-right: 15px;
@@ -301,7 +301,7 @@ gap: 17px;
   background-repeat: no-repeat;
   background-position: 93% 50%;
   background-color: #587b52;
-  font-family: "Inter", sans-serif;
+  font-family: 'Albert Sans', sans-serif;
   border-radius: 12px;
   transition: 1s;
   padding-right: 15px;
