--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Red+Hat+Display:wght@500;700;900&family=Roboto:wght@400;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans&family=Syne&display=swap');
 
 .fundo-branco{
   width: 100%;
@@ -9,7 +9,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Inter", sans-serif;
+  font-family:  'Albert Sans', sans-serif;
 }
 .btn-outline-info {
   width: 125px;
@@ -183,7 +183,7 @@ html {
   border: 2px;
   color: var(--first-white);
   background-color: #587b52;
-  font-family: "Inter", sans-serif;
+  font-family:  'Albert Sans', sans-serif;;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
