--- a/src/app/core/hiring/hiring.component.html
+++ b/src/app/core/hiring/hiring.component.html
@@ -1,10 +1,20 @@
 <div class="top-background"></div>
 <div class="container-background">
-  <div class="top-text">
-  <h1 class="bold-tittle">
-    Inicio / Trabalhe conosco
-  </h1>
-</div>
+    <div class="background-layout">
+    <div class="top-text">
+      <h1 class="bold-tittle">
+        Inicio / Trabalhe conosco
+      </h1>
+    </div>
+    <div class="side-box">
+      <h1 class="big-g-text">
+        Mostre suas habilidades para o mundo.
+      </h1>
+      <h3 class="hiring-text">Faça parte desse time que só vem crescendo, estamos esperando por você.</h3>
+      <button class="contact-button">Vagas disponíveis</button>
+    </div>
+  </div>
+
   <div class="center-text">
   <h2 class="hiring-tittle">Por que trabalhar conosco?</h2>
   <h3 class="hiring-g-text">Temos potencial de crescimento</h3>
