--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -37,7 +37,7 @@
           span {
             font-size: 20px;
             color: var(--first-white);
-            font-family: "Inter", sans-serif;
+            font-family: 'Albert Sans', sans-serif;
             font-style: normal;
             line-height: 120%;
             &:hover {
@@ -47,7 +47,7 @@
           .black {
             font-size: 20px;
             color: black;
-            font-family: "Inter", sans-serif;
+            font-family: 'Albert Sans', sans-serif;
             font-style: normal;
             font-weight: 400;
             line-height: 120%;
@@ -99,7 +99,7 @@
           span {
             font-size: 20px;
             color: var(--first-white);
-            font-family: "Inter", sans-serif;
+            font-family: 'Albert Sans', sans-serif;
             font-style: normal;
             line-height: 120%;
             &:hover {
@@ -109,7 +109,7 @@
           .black {
             font-size: 20px;
             color: black;
-            font-family: "Inter", sans-serif;
+            font-family: 'Albert Sans', sans-serif;
             font-style: normal;
             font-weight: 400;
             line-height: 120%;
@@ -128,7 +128,7 @@
 
       font-size: 20px;
       color:black;
-      font-family: "Inter", sans-serif;
+      font-family: 'Albert Sans', sans-serif;
       font-weight: bold;
       line-height: 120%;
       &:hover {
@@ -183,7 +183,7 @@
     span {
       font-size: 20px;
       color: var(--first-white);
-      font-family: "Inter", sans-serif;
+      font-family: 'Albert Sans', sans-serif;
       font-style: normal;
       font-weight: 400;
       line-height: 36px;
