atualização de responsividade

--- a/src/app/core/hiring/hiring.component.html
+++ b/src/app/core/hiring/hiring.component.html
@@ -6,11 +6,12 @@
         Inicio / Trabalhe conosco
       </h1>
     </div>
+
     <div class="side-box">
-      <h1 class="big-g-text">
+      <h3 class="big-g-text">
         Mostre suas habilidades para o mundo.
-      </h1>
-      <h3 class="hiring-text">Faça parte desse time que só vem crescendo, estamos esperando por você.</h3>
+      </h3>
+      <h3 class="hiring-text-top">Faça parte desse time que só vem crescendo, estamos esperando por você.</h3>
       <button class="contact-button">Vagas disponíveis</button>
     </div>
   </div>
