--- a/src/app/core/about-us/about-us.component.scss
+++ b/src/app/core/about-us/about-us.component.scss
@@ -5,6 +5,7 @@ color: white;
 }
 .container-background{
   width: 100%;
+
   display: flex;
   flex-direction: column;
   }
@@ -13,7 +14,7 @@ color: white;
     align-items: flex-start;
   }
 .bold-tittle{
-  margin-left: 5%;
+  margin-left: 10%;
   font-style: normal;
   font-weight: 600;
   font-size: 15px;
@@ -59,37 +60,108 @@ color: #3A5237;
 .cards{
   display: flex;
   flex-direction: row;
-  padding: 1%;
   justify-content: center;
   gap: 5px;
-  padding: 3%;
+  padding: 1%;
   margin-bottom: 20%;
 }
 
 .about-card{
   width: 280px;
-  height: 200px;
-  display: flex;
-  flex-direction: column;
+  max-height: 300px;
+  display: grid;
   padding: 2%;
   gap: 8%;
   }
-
   .card-tittle{
-
   font-style: normal;
   font-weight: 600;
   font-size: 17px;
-  line-height: 120%;
+  letter-spacing: 2px;
+  text-overflow: ellipsis;
+  overflow: hidden;
   color: black;
-
   }
   .card-text{
-
-  font-style: normal;
+   font-style: normal;
   font-weight: 400;
   font-size: 17px;
-  line-height: 120%;
+
   color: #333333;
 
+
   }
+  .wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+  }
+  .cards-wrap{
+   padding: 20px;
+   width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+.card-item{
+  padding: 15px 25px;
+  width: 25%;
+}
+.card-inner{
+  padding: 35px 20px;
+  min-width: 225px;
+  min-height: 315px;
+  width: 100%;
+}
+@media screen and (max-width: 1024px){
+  .card-item{
+    width: 33%;
+  }
+}
+@media screen and (max-width: 768px){
+  .card-item{
+    width: 50%;
+  }
+  .about-tittle{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+
+    text-align: center;
+    color: #587B52;
+    }
+    .about-g-text{
+    width: 400px;
+    height: 75px;
+    left: 308px;
+    top: 388px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 21px;
+    margin-bottom: 15%;
+    text-align: center;
+    color: #3A5237;
+    }
+    .about-text{
+      width: 400px;
+      height: 40px;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 17px;
+
+      text-align: center;
+      color: #333333;
+    }
+}
+@media screen and (max-width: 568px){
+  .card-item{
+    width: 100%;
+  }
+  .about-g-text{
+    margin-bottom: 22%;}
+
+}
