--- a/src/app/core/hiring/hiring.component.scss
+++ b/src/app/core/hiring/hiring.component.scss
@@ -5,6 +5,7 @@
   }
   .container-background{
     width: 100%;
+
     display: flex;
     flex-direction: column;
     }
@@ -12,13 +13,37 @@
      display: flex;
       align-items: flex-start;
 }
+.bold-tittle{
+  margin-left: 10%;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 22px;
+}
+.side-box{
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+  margin-left: 10%;
+}
+
 .big-g-text{
   font-family:'Syne', sans-serif;
 font-style: normal;
 font-weight: 700;
 font-size: 36px;
-line-height: 120%;
 color: #3A5237;
+width: 270px;
+height: 150px;
+}
+.hiring-text-top{
+  width: 825px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  width: 400px;
+  height: 50px;
+  color: #333333;
 }
 .contact-button {
   width: 190px;
@@ -33,8 +58,7 @@ color: #3A5237;
   border-radius: 12px;
   transition: 1s;
   padding-right: 15px;
-  margin-left: 30%;
-  margin-top: 5%;
+  margin-top: 1%;
   &:hover {
     cursor: pointer;
     border: 1px solid #587b52;
@@ -50,7 +74,7 @@ color: #3A5237;
   }
 }
 .background-layout{
-  background-image:url("/assets/svg/background-hiring.svg");
+  background-image:url("/assets/svg/background-hiring.png");
   width: 100%;
   height: 538px;
   top: 0px;
@@ -58,13 +82,7 @@ color: #3A5237;
   position: relative;
 
 }
-  .bold-tittle{
-    margin-left: 5%;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 22px;
-  }
+
   .center-text{
     display: flex;
     flex-direction: column;
