--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 </div>
-
+<div class="background-about">
 <div class="container-about">
   <div class="about-box">
     <h3 class="about-tittle">Quem somos</h3>
@@ -32,6 +32,7 @@
   <div class="about-box">
     <img src="assets/svg/image-section.svg" alt="" />
   </div>
+</div>
 </div>
 <!-- <div class="partners">
   <h1 class="about-tittle">Rede de Parceiros</h1>
