--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -30,7 +30,7 @@
     <button class="about-button">Sobre nós </button>
   </div>
   <div class="about-box">
-    <img src="assets/svg/image-section.svg" alt="" />
+    <img class="sustentability-img" src="assets/svg/image-section.svg" alt="" />
   </div>
 </div>
 </div>
@@ -82,7 +82,7 @@
   </h1></div>
   <div class="boxes">
   <div class="sustentability-box">
-    <img src="assets/svg/sustentability-1.svg" alt="">
+    <img class="sustentability-img" src="assets/svg/sustentability-1.svg" alt="">
 
     <h2 class="hiring-text">
       Redução de 80% no uso de copos descartáveis, uma vez que todos os colaboradores utilizam o seu próprio copo para tomar água e café.
@@ -90,7 +90,7 @@
 
   </div>
   <div class="sustentability-box">
-    <img src="assets/svg/sustentability-2.svg" alt="">
+    <img class="sustentability-img" src="assets/svg/sustentability-2.svg" alt="">
 
     <h2 class="hiring-text">
       Projetos sociais locais e nacionais, com apoio à ONGs, doações de alimentos, ajuda de custo, disponibilização de sistema 100% gratuito e ações em datas comemorativas, com diversas formas de doações.
