--- a/src/app/core/contact-us/contact-us.component.scss
+++ b/src/app/core/contact-us/contact-us.component.scss
@@ -165,4 +165,10 @@ padding-left: 10%;
     margin-left: 5%;
     width: 300px;
   }
+  .contact-image{
+    width: 340px;
+  }
+  .contact-box{
+    height: 430px;
+  }
   }
