--- a/src/app/core/about-us/about-us.component.scss
+++ b/src/app/core/about-us/about-us.component.scss
@@ -162,6 +162,11 @@ color: #3A5237;
     width: 100%;
   }
   .about-g-text{
-    margin-bottom: 22%;}
+    margin-bottom: 22%;
+    width: 340px;
+  }
+    .about-text{
+    width: 340px;
+    }
 
 }
