--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -62,6 +62,7 @@
       }
     }
   }
+
   .baseline-black {
     color: black;
     width: 100%;
@@ -138,9 +139,16 @@
   }
 
 
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 730px) {
     i {
       font-size: 40px;
+    }
+    .baseline-menu{
+      padding: 1%;
+    }
+    .baseline-logo{
+      margin-right: 35px;
+      margin-left: 15px;
     }
     .mobile-button {
       display: flex;
